# data-science-stuff

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.cursor/rules/: data_science_rules.mdc  development_workflow.mdc  makefile.mdc
.github/workflows/: ci.yml  python-app.yml
ID2222-Data-Mining-Sanvito-Stuart/lab1/src/: lsh.py  shingling.py
ID2222-Data-Mining-Sanvito-Stuart/lab2/src/: rule_generation.py
ID2222-Data-Mining-Sanvito-Stuart/lab4/src/: spectral_clustering.py  utils.py
ID2222-Data-Mining-Sanvito-Stuart/lab5/output/: 3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.99_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_-1_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_250_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_250_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.03_RNSS_3_URSS_6_A_1.0_R_1000_RESTART_-1_ANNEALER_LINEAR.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.03_RNSS_3_URSS_6_A_2.0_R_1000_RESTART_-1_ANNEALER_LINEAR.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.03_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_-1_ANNEALER_LINEAR.txt  add20.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  add20.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.03_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_250_ANNEALER_LINEAR.txt  facebook.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  facebook.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_250_ANNEALER_EXPONENTIAL.txt
data_mining/lab1/src/: Finding Similar Items.ipynb  compare_signatures.py  lsh.py  min_hashing.py  shingling.py
data_mining/lab2/src/: Discovery of Frequent Itemsets and Association Rules.ipynb  a_priori.py
data_mining/lab3/src/: Mining Data Streams.ipynb  triest.py
data_mining/lab4/src/: Graph Spectra.ipynb  spectral_clustering.py  utils.py
data_mining/lab5/graphs/: 3elt.graph  4elt.graph  add20.graph  data.graph  scale-1000.graph  synth-0.25-1000.graph  synth-0.75-1000.graph  synth-0.95-1000.graph  synth-0.95-10000.graph  synth-0.95-250.graph  synth-0.95-25000.graph  synth-0.95-5000.graph  twitter.graph  vibrobox.graph  ws-1000.graph  ws-10000.graph  ws-250.graph  ws-25000.graph  ws-5000.graph
data_mining/lab5/output/: 3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.7_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.7_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_400_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.99_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_-1_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.99_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_10.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_2.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_2.0_R_1000_RESTART_-1_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_EXPONENTIAL.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.0015_RNSS_3_URSS_6_A_2.0_R_1000_RESTART_-1_ANNEALER_LINEAR.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.03_RNSS_3_URSS_6_A_3.0_R_1000_RESTART_250_ANNEALER_LINEAR.txt  3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_5.0_D_0.03_RNSS_3_URSS_6_A_2.0_R_1000_RESTART_-1_ANNEALER_LINEAR.txt  add20.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_250_ANNEALER_EXPONENTIAL.txt  facebook.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.99_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_-1_ANNEALER_CUSTOM.txt  facebook.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_1.0_D_0.9_RNSS_3_URSS_6_A_5.0_R_1000_RESTART_200_ANNEALER_CUSTOM.txt  (+1 more)
data_science_stuff/: _version.py
playground-s5e5/: README.md
playground-s5e5/src/: baseline_solution.py
playground-series-s5e6/: README.md  requirements.txt
playground-series-s5e6/src/: baseline.py  logistic_baseline.py  pycaret_model.py  xgboost_baseline.py
playground-series-s6e1/: README.md
playground-series-s6e4/: .gitignore  README.md
playground-series-s6e4/src/: baseline.py  cv_results.py  error_analysis.py  formula.py  formula_feature_lgbm.py  formula_residual_lgbm.py  tune_thresholds.py
playground-series-s6e5/: CLAUDE.md  README.md
playground-series-s6e5/notebooks/: analysis.py  distribution_shift.py  eda.py
playground-series-s6e5/results/: best_params.json  best_params_catboost.json  best_params_mlp.json  best_params_rnn.json  best_params_xgboost.json  lgbm_ar_fold1.txt  lgbm_ar_fold2.txt  lgbm_ar_fold3.txt  lgbm_ar_fold4.txt  lgbm_ar_fold5.txt  oof_catboost.npy  oof_ensemble.npy  oof_lgbm.npy  oof_lgbm_ar.npy  oof_mlp.npy  oof_rnn.npy  oof_stacking.npy  oof_xgboost.npy  test_catboost.npy  test_lgbm.npy  test_lgbm_ar.npy  test_mlp.npy  test_rnn.npy  test_xgboost.npy
playground-series-s6e5/src/: ablation_driver.py  baseline.py  blend_submissions.py  cv_results.py  ensemble.py  features.py  stacking.py  stacking_v2.py  train_catboost.py  train_lgbm_ar.py  train_mlp.py  train_rnn.py  train_xgboost.py  tune.py  tune_catboost.py  tune_mlp.py  tune_rnn.py  tune_xgboost.py
playground_series_s5e1/: baseline.py
playground_series_s5e1/analysis/: analysis.ipynb
playground_series_s5e1/data/: test.csv  train.csv
playground_series_s5e1/utils/: data.py
