[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.0",  # For versioning from SCM tags
    "tomli>=1.1",  # Needed for setuptools_scm
]
build-backend = "setuptools.build_meta"

[project]
name = "data-science-stuff"
version = "0.0.1"
authors = [
  { name="Alessandro Sanvito", email="alessandro.sanvito@gmail.com" },
]
description = "My very own data science package."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "scikit-learn>=0.24",
]

[project.optional-dependencies]
development = [
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
    "pre-commit",
    "scipy-stubs",
    "networkx-stubs"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
select = ["E", "F", "W", "C"]
ignore = ["E501"]  # Ignore line length for Ruff, Black will handle it

[tool.mypy]
python_version = 3.9
strict = true
warn_unreachable = true
warn_unused_ignores = true
check_untyped_defs = true

disable_error_code = ["attr-defined"]

[tool.coverage.run]
branch = true
source = ["data_science_stuff"]

[tool.coverage.report]
omit = [
    "tests/*",
    "*.pyc",
    "__pycache__/*",
    "setup.py",
]
precision = 2
